--- a/elink-iov-message-processor-pro/src/main/resources/application.properties
+++ b/elink-iov-message-processor-pro/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=Admin@228
 ##spring.rabbitmq.virtualHost=test
 #
 ##是否开启rabbitmq消息持久化特性，开启该特性会减低性能，可提高消息可靠性,平台各个服务配置请保持一致
@@ -36,7 +36,7 @@ rabbitmq.downstream.message.exchange=elink.downstream.message.direct.exchange
 #    #properties:
 #      #max.request.size: 500000000
 #      #request.timeout.ms: 60000
-#spring.kafka.consumer.group-id=elink-iov-message-processor
+#spring.kafka.consumer.group-id=elink-iov-tjsatl-2017-message-gateway-dev
 ## 自动提交的时间间隔 在spring boot 2.X 版本中这里采用的是值的类型为Duration 需要符合特定的格式，如1S,1M,2H,5D
 #spring.kafka.consumer.auto-commit-interval=1S
 ## 该属性指定了消费者在读取一个没有偏移量的分区或者偏移量无效的情况下该作何处理：
@@ -80,5 +80,5 @@ elink.upstream.gps.topic=elink-upstream-gps-message
 #终端多媒体消息上行队列
 elink.upstream.media.topic=elink-upstream-media-message
 
-#终端文件消息上行队列
+#终端文件消息上行队列，由于文件是临时存放在本地服务器，故该队列必须配合elink-iov-file-message-processor一起使用，当网关不在同一个服务器时，每个网关的队列名称不应相同且每个网关所在的对应服务器上部署一个elink-iov-file-message-processor来监听该队列
 elink.upstream.file.topic=elink-upstream-file-message${elink.gateway.seq}
