--- a/elink-iov-message-processor-pro/src/main/resources/application.properties
+++ b/elink-iov-message-processor-pro/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=Admin@228
 ##spring.rabbitmq.virtualHost=test
 #
 ##是否开启rabbitmq消息持久化特性，开启该特性会减低性能，可提高消息可靠性,平台各个服务配置请保持一致
